changed the festival title to manchester film festival

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <div class="section-jumbotron">
 
     <div class="jumbotron-text">
-      <h1 class="header-front-page">Brooklyn Film Festival 2018 | August 5-8th | Brooklyn Bridge Park</h1>
+      <h1 class="header-front-page">Manchester Film Festival 2018 | August 5-8th | Brooklyn Bridge Park</h1>
 
       <a class="btn-success btn-lg" id="CTA-jumbotron" href="#anchor-pre-register" role="button">Save a seat</a>
     </div>
